--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "serve-json": "json-server --watch ./json-server/db.json --port 4000"
+    "serve-json": "json-server --watch ./json-server/db.json --port 4000",
+    "css": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/globals.css --minify --watch"
   },
   "dependencies": {
     "json-server": "^0.17.0",
