--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch:css": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/globals.css --minify --watch"
   },
   "dependencies": {
+    "disqus-react": "^1.1.2",
     "json-server": "^0.17.0",
     "next": "12.0.10",
     "react": "17.0.2",
