--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-server": "^0.17.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
