--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "start": "next start",
     "lint": "next lint",
     "serve": "node server.js",
-    "serve:json": "json-server --watch ./json-server/db.json --port 4000",
+    "serve:json": "json-server --watch ./json-server/posts.json --port 4000",
     "watch:css": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/globals.css --minify --watch"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.13.0",
     "disqus-react": "^1.1.2",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "firebase": "^9.6.7",
+    "html-to-draftjs": "^1.5.0",
     "json-server": "^0.17.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-transition-group": "^4.4.2"
+    "react-draft-wysiwyg": "^1.14.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
