--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "^1.14.7"
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-hook-form": "^7.27.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
